test_regress/t/t_with.out
%Error: t/t_with.v:32:22: Can't find definition of variable: 'v'
   32 |       i = aliases.or(v) with (v);
      |                      ^
%Error: Exiting due to
